--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ ul {
 }
 
 .strip {
-    background-color: rgba(0, 0, 0, .2);
+    background-color: rgba(0, 0, 0, .15);
     width: 1px;
     height: 100vh;
     position: absolute;
@@ -100,8 +100,9 @@ ul {
     bottom: -1rem;
     right: -5rem;
     padding: .5rem 1.5rem;
-    font-size: 3rem;
     font-family: "Charm", cursive;
+    font-size: 3rem;
+    font-weight: bold;
 }
 
 .tagline {
